--- a/src/components/Navigation/style.css
+++ b/src/components/Navigation/style.css
@@ -5,6 +5,7 @@
 .appbar-title{
     color: #ef7998;
     font-family: 'Pacifico', cursive;
+    font-size: 1rem;
 }
 .appbar-title:hover{
   text-decoration: underline;
@@ -55,4 +56,10 @@
         display: none;
     }
     
+  }
+
+  @media (min-width: 800px){
+    .appbar-title{
+      font-size: 1.75rem;
+  }
   }
